Update 6/21 빅분기 실기 공부

--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 3. 월드컵 출전선수 골기록 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 3. 월드컵 출전선수 골기록 데이터.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "0be87886",
    "metadata": {},
    "outputs": [
@@ -272,11 +272,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1c5b1336",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1250\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2 = df.loc[df['check']==True]\n",
+    "print(df2.shape[0])"
+   ]
   },
   {
    "attachments": {},
@@ -289,11 +300,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2a5fa1a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hw981\\AppData\\Local\\Temp\\ipykernel_11656\\4270838856.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df2['LenCup'] = df2['yearlst'].str.len()\n"
+     ]
+    }
+   ],
+   "source": [
+    "df2['LenCup'] = df2['yearlst'].str.len()\n",
+    "result = df2.loc[df2['LenCup']==4].shape[0]\n",
+    "print(result)"
+   ]
   },
   {
    "attachments": {},
@@ -306,11 +341,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "89542b48",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df2.loc[(df2['Country']==\"Yugoslavia\")&(df2['LenCup']==2)].count()[6]\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -323,11 +369,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "f9ba95a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "156\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = len(df2.loc[df2['Years'].str.contains(\"2002\")])\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -340,11 +397,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "abf303d5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df2['Player'].str.lower().str.contains('carlos').sum()\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -357,11 +425,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "f7618b86",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Just Fontaine\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df2.loc[df2['LenCup']==1].sort_values(by='Goals', ascending=False).head(1)['Player'].values[0]\n",
+    "print(answer)"
+   ]
   },
   {
    "attachments": {},
@@ -374,8 +453,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "42b116e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brazil\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df2.loc[df2['LenCup']==1].groupby('Country')['Player'].count().sort_values(ascending=False).idxmax()\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b05f3aa3",
    "metadata": {},
    "outputs": [],
    "source": []
