--- a/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 4. 서울시 따릉이 이용정보 데이터.ipynb
+++ b/빅데이터분석기사/작업 1유형(datamanim)/작업1유형 - 4. 서울시 따릉이 이용정보 데이터.ipynb
@@ -9,13 +9,12 @@
    "source": [
     "import pandas as pd\n",
     "df =pd.read_csv('https://raw.githubusercontent.com/Datamanim/datarepo/main/bicycle/seoul_bi.csv')\n",
-    "df.head()\n",
-    "df.to_csv('자전거이용정보.csv')"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "15c3c4aa",
    "metadata": {},
    "outputs": [
@@ -214,8 +213,8 @@
        "</div>"
       ],
       "text/plain": [
-       "              대여일자  대여시간  대여소번호 대여구분코드 성별 연령대코드  이용건수     운동량   탄소량     이동거리  \\\n",
-       "0       2021-06-01     0   3541    정기권  F  ~10대     1    0.00  0.00     0.00   \n",
+       "              대여일자  대여시간  대여소번호 대여구분코드 성별 연령대코드  이용건수     운동량   탄소량     이동거리   \n",
+       "0       2021-06-01     0   3541    정기권  F  ~10대     1    0.00  0.00     0.00  \\\n",
        "1       2021-06-01     0    765    정기권  F  ~10대     1   27.21  0.35  1526.81   \n",
        "2       2021-06-01     0   2637    정기권  F  ~10대     1   41.40  0.37  1608.56   \n",
        "3       2021-06-01     0   2919    정기권  F  ~10대     1    0.00  0.00     0.00   \n",
@@ -243,12 +242,14 @@
        "[678950 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
@@ -479,6 +480,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8d7bb99f",
    "metadata": {},
@@ -488,13 +490,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "c153966d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>대여일자</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-06-01</th>\n",
+       "      <td>48081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-02</th>\n",
+       "      <td>56100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-03</th>\n",
+       "      <td>18985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-04</th>\n",
+       "      <td>56788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-05</th>\n",
+       "      <td>52730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-06</th>\n",
+       "      <td>47787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-07</th>\n",
+       "      <td>52623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-08</th>\n",
+       "      <td>55623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-09</th>\n",
+       "      <td>54507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-10</th>\n",
+       "      <td>36992</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-11</th>\n",
+       "      <td>52089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-12</th>\n",
+       "      <td>48569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-13</th>\n",
+       "      <td>43131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-06-14</th>\n",
+       "      <td>54945</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            count\n",
+       "대여일자             \n",
+       "2021-06-01  48081\n",
+       "2021-06-02  56100\n",
+       "2021-06-03  18985\n",
+       "2021-06-04  56788\n",
+       "2021-06-05  52730\n",
+       "2021-06-06  47787\n",
+       "2021-06-07  52623\n",
+       "2021-06-08  55623\n",
+       "2021-06-09  54507\n",
+       "2021-06-10  36992\n",
+       "2021-06-11  52089\n",
+       "2021-06-12  48569\n",
+       "2021-06-13  43131\n",
+       "2021-06-14  54945"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-06-04\n"
+     ]
+    }
+   ],
+   "source": [
+    "target = df['대여일자'].value_counts().sort_index().to_frame()\n",
+    "answer = target.sort_values(by='count', ascending=False).index[0]\n",
+    "display(target)\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a6cfc46c",
    "metadata": {},
@@ -504,13 +631,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "fe4890ab",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            count\n",
+      "day_name         \n",
+      "Wednesday  110607\n",
+      "Friday     108877\n",
+      "Monday     107568\n",
+      "Tuesday    103704\n",
+      "Saturday   101299\n",
+      "Sunday      90918\n",
+      "Thursday    55977\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['대여일자'] = pd.to_datetime(df['대여일자'], format='%Y-%m-%d')\n",
+    "df['day_name'] = df['대여일자'].dt.day_name()\n",
+    "answer = df['day_name'].value_counts().to_frame()\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "452a2e9c",
    "metadata": {},
@@ -520,13 +669,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "7c7fcf1a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>day_name</th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th>size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>502</td>\n",
+       "      <td>282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>502</td>\n",
+       "      <td>267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>2715</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>502</td>\n",
+       "      <td>372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>502</td>\n",
+       "      <td>378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Monday</td>\n",
+       "      <td>502</td>\n",
+       "      <td>242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Friday</td>\n",
+       "      <td>502</td>\n",
+       "      <td>277</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    day_name  대여소번호  size\n",
+       "0  Wednesday    502   282\n",
+       "1    Tuesday    502   267\n",
+       "2   Thursday   2715   137\n",
+       "3     Sunday    502   372\n",
+       "4   Saturday    502   378\n",
+       "5     Monday    502   242\n",
+       "6     Friday    502   277"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "result = df.groupby(by=['day_name', '대여소번호']).size().to_frame('size').sort_values(by=['day_name', 'size'], ascending=False).reset_index()\n",
+    "answer = result.drop_duplicates('day_name', keep='first').reset_index(drop=True)\n",
+    "display(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2cd0e3a6",
    "metadata": {},
@@ -536,13 +778,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "2b0fb6ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "연령대코드\n",
+      "~10대    0.312525\n",
+      "20대     0.239913\n",
+      "30대     0.166702\n",
+      "40대     0.110585\n",
+      "50대     0.065414\n",
+      "70대~    0.048962\n",
+      "60대     0.042462\n",
+      "Name: count, dtype: float64\n",
+      "max ratio age: ~10대\n"
+     ]
+    }
+   ],
+   "source": [
+    "daily = df.loc[df['대여구분코드'].isin(['일일권', '일일권(비회원)'])]['연령대코드'].value_counts().sort_index()\n",
+    "total = df['연령대코드'].value_counts().sort_values()\n",
+    "\n",
+    "ratio = (daily / total).sort_values(ascending=False)\n",
+    "print(ratio)\n",
+    "print(\"max ratio age:\", ratio.index[0])"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bec3e05c",
    "metadata": {},
@@ -552,13 +819,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "f99c3abc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              이동거리\n",
+      "연령대코드             \n",
+      "20대    3211.890552\n",
+      "30대    3341.443859\n",
+      "40대    3514.857416\n",
+      "50대    3593.668100\n",
+      "60대    3538.145737\n",
+      "70대~   3085.039641\n",
+      "~10대   2634.426279\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = df.groupby(by='연령대코드')['이동거리'].mean().to_frame()\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a99dc071",
    "metadata": {},
@@ -568,13 +855,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "id": "193bf578",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.613\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = df.loc[df['연령대코드']=='20대']['이동거리'].mean()\n",
+    "target = df.loc[(df['연령대코드']=='20대')&(df['이동거리']>=mean)].sort_values(by=['대여일자', '대여소번호'], ascending=False)[:200]['탄소량'].astype(dtype=float)\n",
+    "answer = round(target.mean(), 3)\n",
+    "print(answer)"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3151a5c3",
    "metadata": {},
@@ -591,6 +892,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2c180bbe",
    "metadata": {},
@@ -607,6 +909,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bf8ad944",
    "metadata": {},
@@ -623,6 +926,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f9639b7f",
    "metadata": {},
@@ -655,7 +959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
