Update 6/22 빅분기 실기 준비

--- a/빅데이터분석기사/빅데이터분석기사_실기.md
+++ b/빅데이터분석기사/빅데이터분석기사_실기.md
@@ -545,17 +545,17 @@ model.score(x_test, y_test)
 
 - 가설 검정
 
-    - 가설 검정: 모집단에 대해 가설 설정 후 표본관찰을 통해 그 가설의 채택 여부를 결정하는 통계적 추론 방법
+  - 가설 검정: 모집단에 대해 가설 설정 후 표본관찰을 통해 그 가설의 채택 여부를 결정하는 통계적 추론 방법
 
-        - 절차
+    - 절차
 
-            1. 가설 설정: 귀무가설/대립가설
+        1. 가설 설정: 귀무가설/대립가설
 
-            2. 유의수준(a) 설정: 제 1종 오류의 최대 허용 한계
+        2. 유의수준(a) 설정: 제 1종 오류의 최대 허용 한계
 
-            3. 검정통계량 산출: 검정통계량을 통해 p-value 산출
+        3. 검정통계량 산출: 검정통계량을 통해 p-value 산출
 
-            4. 기각/채택 판단: p-value < a 일 때 귀무가설 기각
+        4. 기각/채택 판단: p-value < a 일 때 귀무가설 기각
 
     - 가설의 종류
 
@@ -753,3 +753,56 @@ model.score(x_test, y_test)
 
     - alternative less -> 효과 있음에 대해 판단할 때 사용
     </br> `ttest_rel(df['after'], df['before'], alternative='less')`
+
+- ANOVA(분산분석, ANalysis Of Variance)
+
+  - 독립변수는 범주형, 종속변수는 연속형으로 하는 3개 이상의 집단 평균을 비교하는 검정방법
+  
+  - 집단간분산/집단내분산 기반의 F분포를 이용해 가설을 검정. 정규성, 등분산성, 독립성을 가정
+  
+  - "집단 간 분산"과 "집단 내 분산"을 이용해 분석하는 방법이어서 "분산분석"이라고 함
+  
+  - 귀무가설 기각 시 구체적인 차이를 파악하기 위해, 사후 검정이 필요함
+  
+  - 등분산/동일크기 표본 - Tukey 검정, 등분산/다른크기 표본 - Scheffe 검정, Fisher's LSD 검정 등이 있음
+  
+  - 분산을 사용한 평균 차이 검정
+  
+    - 일원분산분석(One-Way ANOVA)
+    
+        - 범주형 독립 변수가 한 개인 경우 사용
+        
+        - 예) 계절별 아이스크림 판매량 평균이 동일하다
+    
+        - 일원분산분석의 귀무가설/대립가설: H0=모든 집단의 평균이 같다 / H1=하나 이상의 집단의 평균이 다르다
+        
+        - 함수
+        
+        ```python
+        from scipy.stats import f_oneway
+        
+        f_oneway(*samples)  # F-statistic, p-value 반환
+        
+        import statsmodels.api as am
+        
+        from statsmodels.formula.api import ols
+        
+        sm.stats.anova_lm(선형모델) # 분산분석표 DataFrame 반환
+        ols(fomula, data).fit()     # 선형모델 반환
+        
+        ```
+    
+    - 이원분산분석(Two-Way ANOVA)
+    
+        - 범주형 독립 변수가 두 개인 경우 사용(K-Way ANOVA, 범주형 변수가 K개인 경우)
+    
+        - 각 변수의 주 효과 및 두 변수의 상호작용효과를 분석(주 효과: 각 변수로 일원분산분석 한 결과)
+        
+        - 귀무가설, 대립가설이 3개 세트
+        
+        - 예) 날씨 및 계절의 아이스크림 판매량에 대한 각각의 영향도와 상호작용을 확인한다.
+        <br>(두 요인이 연속형 종속변수에 영향을 주는지 안 주는지 분석하는 것)
+        
+        - 이원분산분석의 귀무가설/대립가설: H0=1 변수 그룹들의 평균은 동일하다 / H1=1 변수 그룹들의 평균은 다르다.
+        <br> + H0=2 변수 그룹들의 평균은 동일하다 / H1=2 변수 그룹들의 평균은 다르다
+        <br> + H0=두 변수 사이의 상호작용 효과가 없다 / H1=두 변수 사이의 상호작용 효과가 있다.
